[package]
name = "subfield_proto"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
prost.workspace = true
bytes.workspace = true
poem-grpc.workspace = true

#protobuf.workspace = true
# serde.workspace = true
# serde_json.workspace = true
# prost.workspace = true
# prost-types.workspace = true
# bytes.workspace = true
[dev-dependencies]
rand.workspace = true
poem.workspace = true
tokio.workspace = true

[build-dependencies]
#protobuf-codegen.workspace = true
# prost-build.workspace = true
poem-grpc-build.workspace = true
