[package]
name = "subfield_proto"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
prost.workspace = true
bytes.workspace = true

[dev-dependencies]
rand.workspace = true
poem.workspace = true
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
#protobuf-codegen.workspace = true
prost-build.workspace = true
